updates changed employee hours to be a float and only allow quarter fractions. ie. .25 .50 .75